objects/ASI_CRM_Fix_Approval_Route__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_CN_Alternative_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alternative Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_CRM_Fix_Approval_Route8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Approval_Limit_10__c</fullName>
        <label>Approval Limit (10)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Approval_Limit_11__c</fullName>
        <label>Approval Limit (11)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Approval_Limit_12__c</fullName>
        <label>Approval Limit (12)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Approver_10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 10</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_CRM_Fix_Approval_RouteHhRW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Approver_11__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 11</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_CRM_Fix_Approval_RouteHhRg</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Approver_12__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 12</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_CRM_Fix_Approval_RouteHhRl</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Entry_Limit__c</fullName>
        <label>Entry Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Region_Area_Channel__c</fullName>
        <label>Division/Region/Area/Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Regional_BA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional BA</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_CRM_Fix_Approval_Route6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contract 1st Part</fullName>
                </value>
                <value>
                    <fullName>Contract 2nd Part</fullName>
                </value>
                <value>
                    <fullName>Payment 1st Part</fullName>
                </value>
                <value>
                    <fullName>Payment 2nd Part</fullName>
                </value>
                <value>
                    <fullName>IOM</fullName>
                </value>
                <value>
                    <fullName>WS T1</fullName>
                </value>
                <value>
                    <fullName>WS T2</fullName>
                </value>
                <value>
                    <fullName>Channel Strategy</fullName>
                </value>
                <value>
                    <fullName>WS Evaluation</fullName>
                </value>
                <value>
                    <fullName>Visual Application</fullName>
                </value>
                <value>
                    <fullName>Last Payment 1st Part</fullName>
                </value>
                <value>
                    <fullName>Last Payment 2nd Part</fullName>
                </value>
                <value>
                    <fullName>National Group Contract 1st Part</fullName>
                </value>
                <value>
                    <fullName>National Group Contract 2nd Part</fullName>
                </value>
                <value>
                    <fullName>Contract (IHBR) 1st</fullName>
                </value>
                <value>
                    <fullName>Contract (IHBR) 2nd</fullName>
                </value>
                <value>
                    <fullName>Last Payment (IHBR) 1st Part</fullName>
                </value>
                <value>
                    <fullName>Last Payment (IHBR) 2nd Part</fullName>
                </value>
                <value>
                    <fullName>Payment (IHBR) 1st Part</fullName>
                </value>
                <value>
                    <fullName>Payment (IHBR) 2nd Part</fullName>
                </value>
                <value>
                    <fullName>PR Direct</fullName>
                </value>
                <value>
                    <fullName>Receiving G(non cash)&amp;H-Trip</fullName>
                </value>
                <value>
                    <fullName>Receiving G(non cash)&amp;H-Non-Trip</fullName>
                </value>
                <value>
                    <fullName>Receiving Cash-Notification</fullName>
                </value>
                <value>
                    <fullName>Offering PO(Non-Facilitation Fees)</fullName>
                </value>
                <value>
                    <fullName>Offering H- Contract Outlet(Non-PO)</fullName>
                </value>
                <value>
                    <fullName>Offering Non-PO</fullName>
                </value>
                <value>
                    <fullName>Sales Order</fullName>
                </value>
                <value>
                    <fullName>Sales Order - HQ</fullName>
                </value>
                <value>
                    <fullName>Sales Order - IHBR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel</label>
        <referenceTo>ASI_CRM_CN_Channel__c</referenceTo>
        <relationshipLabel>ASI CRM Fix Approval Route</relationshipLabel>
        <relationshipName>ASI_CRM_Fix_Approval_Route</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Commercial_Team__c</fullName>
        <label>Commercial Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Finance_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_CRM_Fix_Approval_RouteFPBN</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_IHBR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IHBR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Logistic_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Logistic Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_CRM_Fix_Approval_RouteFPBX</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Marketing_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For Marketing Investment Approver</description>
        <label>Marketing Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_CRM_Fix_Approval_Route7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Max_Amount__c</fullName>
        <label>Max Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_RVP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RVP</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_CRM_Fix_Approval_RouteFPbu</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sales_Team__c</fullName>
        <label>Sales Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Approval_Limit_1__c</fullName>
        <label>Sys Approval Limit 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Approval_Limit_2__c</fullName>
        <label>Sys Approval Limit 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Approval_Limit_3__c</fullName>
        <label>Sys Approval Limit 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_CRM_Fix_Approval_RouteHfVc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_CRM_Fix_Approval_RouteHfVm</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_CRM_Fix_Approval_RouteHfVw</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_BU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BU</label>
        <referenceTo>ASI_MFM_BU__c</referenceTo>
        <relationshipLabel>ASI CRM Fix Approval Route</relationshipLabel>
        <relationshipName>ASI_CRM_Fix_Approval_Route</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Department__c</fullName>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Expense_Control_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expense Control Form</label>
        <referenceTo>ASI_MFM_Expense_Control_Form__c</referenceTo>
        <relationshipLabel>ASI CRM Fix Approval Route</relationshipLabel>
        <relationshipName>ASI_CRM_Fix_Approval_Route</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ASI CRM Fix Approval Route</label>
    <listViews>
        <fullName>ASI_CRM_CN_Fix_Approval_Route_IOM</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Type__c</columns>
        <columns>ASI_CRM_CN_Region_Area_Channel__c</columns>
        <columns>ASI_CRM_CN_Approver_1__c</columns>
        <columns>ASI_CRM_CN_Approver_2__c</columns>
        <columns>ASI_CRM_CN_Approver_3__c</columns>
        <columns>ASI_CRM_CN_Approver_4__c</columns>
        <columns>ASI_CRM_CN_Approver_5__c</columns>
        <columns>ASI_CRM_CN_Approver_6__c</columns>
        <columns>ASI_CRM_CN_Entry_Limit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Fix_Approval_Route__c.ASI_CRM_CN_Fix_Approval_Route</value>
        </filters>
        <filters>
            <field>ASI_CRM_CN_Type__c</field>
            <operation>equals</operation>
            <value>IOM</value>
        </filters>
        <label>CN Fix Approval Route_IOM</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_CN_Fix_Approval_Route_Sha</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Type__c</columns>
        <columns>ASI_CRM_CN_Region_Area_Channel__c</columns>
        <columns>ASI_CRM_CN_Approver_1__c</columns>
        <columns>ASI_CRM_CN_Approver_2__c</columns>
        <columns>ASI_CRM_CN_Approver_3__c</columns>
        <columns>ASI_CRM_CN_Approver_4__c</columns>
        <columns>ASI_CRM_CN_Approver_5__c</columns>
        <columns>ASI_CRM_CN_Approver_6__c</columns>
        <columns>ASI_CRM_CN_Entry_Limit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Fix_Approval_Route__c.ASI_CRM_CN_Fix_Approval_Route</value>
        </filters>
        <filters>
            <field>ASI_CRM_CN_Region_Area_Channel__c</field>
            <operation>equals</operation>
            <value>Shanghai(Div)</value>
        </filters>
        <label>CN Fix Approval Route_sha</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_CN_Fix_Approval_Route_visual</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Type__c</columns>
        <columns>ASI_CRM_CN_Region_Area_Channel__c</columns>
        <columns>ASI_CRM_CN_Approver_1__c</columns>
        <columns>ASI_CRM_CN_Approver_2__c</columns>
        <columns>ASI_CRM_CN_Approver_3__c</columns>
        <columns>ASI_CRM_CN_Approver_4__c</columns>
        <columns>ASI_CRM_CN_Approver_5__c</columns>
        <columns>ASI_CRM_CN_Approver_6__c</columns>
        <columns>ASI_CRM_CN_Entry_Limit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Fix_Approval_Route__c.ASI_CRM_CN_Fix_Approval_Route</value>
        </filters>
        <filters>
            <field>ASI_CRM_CN_Type__c</field>
            <operation>equals</operation>
            <value>Visual Application</value>
        </filters>
        <label>CN Fix Approval Route_v</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_MO_Fix_Contract</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Type__c</columns>
        <columns>ASI_CRM_CN_Region_Area_Channel__c</columns>
        <columns>ASI_CRM_CN_Approver_1__c</columns>
        <columns>ASI_CRM_CN_Approver_2__c</columns>
        <columns>ASI_CRM_CN_Approver_3__c</columns>
        <columns>ASI_CRM_CN_Approver_4__c</columns>
        <columns>ASI_CRM_CN_Approver_5__c</columns>
        <columns>ASI_CRM_CN_Approver_6__c</columns>
        <columns>ASI_CRM_CN_Entry_Limit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Fix_Approval_Route__c.MO_Fix_Approval_Route</value>
        </filters>
        <filters>
            <field>ASI_CRM_CN_Type__c</field>
            <operation>contains</operation>
            <value>Contract</value>
        </filters>
        <label>MO Fix Approval Route_Contract</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_MO_Power_Users</group>
            <group>ASI_CRM_MO_Standard_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_Fix_Approval_Route_Contract</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Type__c</columns>
        <columns>ASI_CRM_Sales_Team__c</columns>
        <columns>ASI_CRM_CN_Regional_BA__c</columns>
        <columns>ASI_CRM_CN_Approver_1__c</columns>
        <columns>ASI_CRM_CN_Approval_Limit_1__c</columns>
        <columns>ASI_CRM_CN_Approver_2__c</columns>
        <columns>ASI_CRM_CN_Approval_Limit_2__c</columns>
        <columns>ASI_CRM_CN_Approver_3__c</columns>
        <columns>ASI_CRM_CN_Approval_Limit_3__c</columns>
        <columns>ASI_CRM_CN_Approver_4__c</columns>
        <columns>ASI_CRM_CN_Approval_Limit_4__c</columns>
        <columns>ASI_CRM_CN_Approver_5__c</columns>
        <columns>ASI_CRM_CN_Approver_6__c</columns>
        <columns>ASI_CRM_CN_Entry_Limit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Fix_Approval_Route__c.ASI_CRM_CN_Fix_Approval_Route</value>
        </filters>
        <filters>
            <field>ASI_CRM_CN_Type__c</field>
            <operation>contains</operation>
            <value>Local Group Contract Header</value>
        </filters>
        <label>CN_Local_Group_Contract_Header</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_Fix_Approval_Route_FOC_POSM</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Type__c</columns>
        <columns>ASI_CRM_Finance_Approver__c</columns>
        <columns>ASI_CRM_Logistic_Approver__c</columns>
        <columns>ASI_CRM_CN_Region_Area_Channel__c</columns>
        <columns>ASI_CRM_Sales_Team__c</columns>
        <columns>ASI_CRM_CN_Approver_1__c</columns>
        <columns>ASI_CRM_CN_Approval_Limit_1__c</columns>
        <columns>ASI_CRM_CN_Approver_2__c</columns>
        <columns>ASI_CRM_CN_Approval_Limit_2__c</columns>
        <columns>ASI_CRM_CN_Approver_3__c</columns>
        <columns>ASI_CRM_CN_Approver_4__c</columns>
        <columns>ASI_CRM_CN_Regional_BA__c</columns>
        <columns>ASI_CRM_CN_Entry_Limit__c</columns>
        <columns>ASI_CRM_CN_Alternative_Approver__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Fix_Approval_Route__c.ASI_CRM_CN_Fix_Approval_Route</value>
        </filters>
        <filters>
            <field>ASI_CRM_CN_Type__c</field>
            <operation>equals</operation>
            <value>Free Goods Request,POSM</value>
        </filters>
        <label>CN Fix Approval Route FOC/POSM</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_CN_IT_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_Fix_Approval_Route_Importation</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Type__c</columns>
        <columns>ASI_CRM_CN_Region_Area_Channel__c</columns>
        <columns>ASI_CRM_CN_Approver_1__c</columns>
        <columns>ASI_CRM_CN_Approver_2__c</columns>
        <columns>ASI_CRM_CN_Approver_3__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Fix_Approval_Route__c.ASI_CRM_CN_Fix_Approval_Route</value>
        </filters>
        <filters>
            <field>ASI_CRM_CN_Type__c</field>
            <operation>contains</operation>
            <value>Importation Document</value>
        </filters>
        <label>CN Fix Approval Route_Importation</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_Fix_Approval_Route_Pay</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Type__c</columns>
        <columns>ASI_CRM_CN_Region_Area_Channel__c</columns>
        <columns>ASI_CRM_Sales_Team__c</columns>
        <columns>ASI_CRM_CN_Entry_Limit__c</columns>
        <columns>ASI_CRM_CN_Approver_1__c</columns>
        <columns>ASI_CRM_CN_Approval_Limit_1__c</columns>
        <columns>ASI_CRM_CN_Approver_2__c</columns>
        <columns>ASI_CRM_CN_Approval_Limit_2__c</columns>
        <columns>ASI_CRM_CN_Approver_3__c</columns>
        <columns>ASI_CRM_CN_Approval_Limit_3__c</columns>
        <columns>ASI_CRM_CN_Approver_4__c</columns>
        <columns>ASI_CRM_CN_Approver_5__c</columns>
        <columns>ASI_CRM_CN_Approver_6__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Fix_Approval_Route__c.ASI_CRM_CN_Fix_Approval_Route</value>
        </filters>
        <filters>
            <field>ASI_CRM_CN_Type__c</field>
            <operation>contains</operation>
            <value>Payment</value>
        </filters>
        <label>CN Fix Approval Route_Pay</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_Fix_Approval_Route_Price</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Type__c</columns>
        <columns>ASI_CRM_CN_Region_Area_Channel__c</columns>
        <columns>ASI_CRM_CN_Approver_1__c</columns>
        <columns>ASI_CRM_CN_Approver_2__c</columns>
        <columns>ASI_CRM_CN_Approver_3__c</columns>
        <columns>ASI_CRM_CN_Approver_4__c</columns>
        <columns>ASI_CRM_CN_Approver_5__c</columns>
        <columns>ASI_CRM_CN_Approver_6__c</columns>
        <columns>ASI_CRM_CN_Entry_Limit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Fix_Approval_Route__c.ASI_CRM_CN_Fix_Approval_Route</value>
        </filters>
        <filters>
            <field>ASI_CRM_CN_Type__c</field>
            <operation>contains</operation>
            <value>Price</value>
        </filters>
        <label>CN Fix Approval Route_Price</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_Fix_Approval_Route_SCRenovation</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Type__c</columns>
        <columns>ASI_MFM_Expense_Control_Form__c</columns>
        <columns>ASI_MFM_BU__c</columns>
        <columns>ASI_CRM_CN_Approver_1__c</columns>
        <columns>ASI_CRM_CN_Approval_Limit_1__c</columns>
        <columns>ASI_CRM_CN_Approver_2__c</columns>
        <columns>ASI_CRM_CN_Approval_Limit_2__c</columns>
        <columns>ASI_CRM_CN_Approver_3__c</columns>
        <columns>ASI_CRM_CN_Approval_Limit_3__c</columns>
        <columns>ASI_CRM_CN_Approver_4__c</columns>
        <columns>ASI_CRM_CN_Approval_Limit_4__c</columns>
        <columns>ASI_CRM_CN_Approver_5__c</columns>
        <columns>ASI_CRM_CN_Approval_Limit_5__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Fix_Approval_Route__c.ASI_CRM_CN_Fix_Approval_Route</value>
        </filters>
        <filters>
            <field>ASI_CRM_CN_Type__c</field>
            <operation>contains</operation>
            <value>Rental Renovation Form</value>
        </filters>
        <label>CN Fix Approval Route_SCRenovation</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_Fix_Approval_Route_SCRental_Approval</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Type__c</columns>
        <columns>ASI_MFM_Expense_Control_Form__c</columns>
        <columns>ASI_MFM_BU__c</columns>
        <columns>ASI_CRM_CN_Approver_1__c</columns>
        <columns>ASI_CRM_CN_Approval_Limit_1__c</columns>
        <columns>ASI_CRM_CN_Approver_2__c</columns>
        <columns>ASI_CRM_CN_Approval_Limit_2__c</columns>
        <columns>ASI_CRM_CN_Approver_3__c</columns>
        <columns>ASI_CRM_CN_Approval_Limit_3__c</columns>
        <columns>ASI_CRM_CN_Approver_4__c</columns>
        <columns>ASI_CRM_CN_Approval_Limit_4__c</columns>
        <columns>ASI_CRM_CN_Approver_5__c</columns>
        <columns>ASI_CRM_CN_Approval_Limit_5__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Fix_Approval_Route__c.ASI_CRM_CN_Fix_Approval_Route</value>
        </filters>
        <filters>
            <field>ASI_CRM_CN_Type__c</field>
            <operation>contains</operation>
            <value>Rental Approval Form</value>
        </filters>
        <label>CN Fix Approval Route_SCRental_Approval</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_Fix_Approval_Route_SCRental_Request</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Type__c</columns>
        <columns>ASI_MFM_Expense_Control_Form__c</columns>
        <columns>ASI_MFM_BU__c</columns>
        <columns>ASI_CRM_CN_Approver_1__c</columns>
        <columns>ASI_CRM_CN_Approval_Limit_1__c</columns>
        <columns>ASI_CRM_CN_Approver_2__c</columns>
        <columns>ASI_CRM_CN_Approval_Limit_2__c</columns>
        <columns>ASI_CRM_CN_Approver_3__c</columns>
        <columns>ASI_CRM_CN_Approval_Limit_3__c</columns>
        <columns>ASI_CRM_CN_Approver_4__c</columns>
        <columns>ASI_CRM_CN_Approval_Limit_4__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Fix_Approval_Route__c.ASI_CRM_CN_Fix_Approval_Route</value>
        </filters>
        <filters>
            <field>ASI_CRM_CN_Type__c</field>
            <operation>contains</operation>
            <value>Rental Request Form</value>
        </filters>
        <label>CN Fix Approval Route_SCRental_Request</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_Fix_Approval_Route_Sales_Order</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Type__c</columns>
        <columns>ASI_CRM_CN_Region_Area_Channel__c</columns>
        <columns>ASI_CRM_Commercial_Team__c</columns>
        <columns>ASI_CRM_IHBR__c</columns>
        <columns>ASI_CRM_VIP__c</columns>
        <columns>ASI_CRM_Channel__c</columns>
        <columns>ASI_CRM_CN_Regional_BA__c</columns>
        <columns>ASI_CRM_CN_Approver_1__c</columns>
        <columns>ASI_CRM_CN_Approval_Limit_1__c</columns>
        <columns>ASI_CRM_CN_Approver_2__c</columns>
        <columns>ASI_CRM_CN_Approval_Limit_2__c</columns>
        <columns>ASI_CRM_CN_Approver_3__c</columns>
        <columns>ASI_CRM_CN_Approval_Limit_3__c</columns>
        <columns>ASI_CRM_CN_Entry_Limit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Fix_Approval_Route__c.ASI_CRM_CN_Fix_Approval_Route</value>
        </filters>
        <filters>
            <field>ASI_CRM_CN_Type__c</field>
            <operation>contains</operation>
            <value>Sales Order - WS</value>
        </filters>
        <label>CN Fix Approval Route_Sales Order_WS</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_Fix_Approval_Route_Sales_Order_Outlet</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Type__c</columns>
        <columns>ASI_CRM_CN_Region_Area_Channel__c</columns>
        <columns>ASI_CRM_Commercial_Team__c</columns>
        <columns>ASI_CRM_IHBR__c</columns>
        <columns>ASI_CRM_VIP__c</columns>
        <columns>ASI_CRM_Channel__c</columns>
        <columns>ASI_CRM_CN_Regional_BA__c</columns>
        <columns>ASI_CRM_CN_Approver_1__c</columns>
        <columns>ASI_CRM_CN_Approval_Limit_1__c</columns>
        <columns>ASI_CRM_CN_Approver_2__c</columns>
        <columns>ASI_CRM_CN_Approval_Limit_2__c</columns>
        <columns>ASI_CRM_CN_Approver_3__c</columns>
        <columns>ASI_CRM_CN_Approval_Limit_3__c</columns>
        <columns>ASI_CRM_CN_Entry_Limit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Fix_Approval_Route__c.ASI_CRM_CN_Fix_Approval_Route</value>
        </filters>
        <filters>
            <field>ASI_CRM_CN_Type__c</field>
            <operation>contains</operation>
            <value>Sales Order - Outlet</value>
        </filters>
        <label>CN Fix Approval Route_Sales Order_Outlet</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_Fix_Approval_Route_Sales_Order_Search</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Type__c</columns>
        <columns>ASI_CRM_CN_Region_Area_Channel__c</columns>
        <columns>ASI_CRM_Commercial_Team__c</columns>
        <columns>ASI_CRM_IHBR__c</columns>
        <columns>ASI_CRM_VIP__c</columns>
        <columns>ASI_CRM_Channel__c</columns>
        <columns>ASI_CRM_CN_Regional_BA__c</columns>
        <columns>ASI_CRM_CN_Approver_1__c</columns>
        <columns>ASI_CRM_CN_Approval_Limit_1__c</columns>
        <columns>ASI_CRM_CN_Approver_2__c</columns>
        <columns>ASI_CRM_CN_Approval_Limit_2__c</columns>
        <columns>ASI_CRM_CN_Approver_3__c</columns>
        <columns>ASI_CRM_CN_Approval_Limit_3__c</columns>
        <columns>ASI_CRM_CN_Entry_Limit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Fix_Approval_Route__c.ASI_CRM_CN_Fix_Approval_Route</value>
        </filters>
        <filters>
            <field>ASI_CRM_CN_Type__c</field>
            <operation>contains</operation>
            <value>Sales Order - Outlet</value>
        </filters>
        <filters>
            <field>ASI_CRM_CN_Region_Area_Channel__c</field>
            <operation>equals</operation>
            <value>South West Region</value>
        </filters>
        <label>CN Fix Approval Route_Sales Order_Search</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>FAR{000000}</displayFormat>
        <label>ASI CRM Fix Approval Route Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASI CRM Fix Approval Route</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Fix_Approval_Route</fullName>
        <active>true</active>
        <label>CN Fix Approval Route</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_HK_Fix_Approval</fullName>
        <active>true</active>
        <label>HK Fix Approval</label>
    </recordTypes>
    <recordTypes>
        <fullName>MO_Fix_Approval_Route</fullName>
        <active>true</active>
        <label>MO Fix Approval Route</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>